--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
             <li><a href="#">Terms</a></li>
           </ul>
         </div>
-        <p>Copyright &copy; Design &amp; Developed by <a href="http://www.themefisher.com">Themefisher</a>. All rights reserved.</p>
+        <p>Copyright &copy; AI HELPED MATHEMATICS LEARNING AND APPLICATIONS PRIVATE LIMITED (UEN: 2025113335W). All Rights Reserved.</p>
       </div>
     </div>
   </div>
